P2/Arrays/01/var/archive/xmlreports/0/0/1/000038
Content-type: text/xml

<?xml version="1.0" encoding="utf-8"?>
<testing-report run-id="38" judge-id="37" status="CE" scoring="ACM" run-tests="0" contest-id="201" compile-error="yes" >
  <uuid>2321c51c-50a7-4298-811c-6f42eb1d8a2f</uuid>
  <compiler_output>000038.cpp:1:20: warning: extra tokens at end of #include directive [-Wextra-tokens]
#include &lt;iostream&gt;;
                   ^
                   //
000038.cpp:6:13: error: default initialization of an object of const type 'const int [10]'
                const int a[10] ;
                          ^
1 warning and 1 error generated.
</compiler_output>
</testing-report>
